<resources>
    <string name="app_name">My Application</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">点单</string>
    <string name="title_notifications">订单</string>
    <string name="title_myinfo">我的</string>
    <string name="title_activity_bottom_bar">首页</string>

    <string name="myinfo_credit">积分</string>
    <string name="myinfo_code">会员码</string>
    <string name="myinfo_gift">礼品券</string>
    <string name="myinfo_exchange">兑换中心</string>
    <string name="myinfo_info">消息中心</string>
    <string name="myinfo_service">客服中心</string>
    <string name="myinfo_more">更多</string>
    
    <string name="order_shoppingcar">购物车</string>
    <string name="order_calculate">结算</string>

</resources>
