<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_style">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_index_order"
                android:paddingVertical="50dp"
                android:text="TextView"
                android:textSize="40dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/card_style">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:padding="30dp">


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/myinfo_credit" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/myinfo_code" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/myinfo_gift" />


            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/list_style"
                    android:layout_marginVertical="3dp"
                    android:textSize="18dp"
                    android:paddingHorizontal="40dp"
                    android:paddingVertical="10dp"
                    android:text="@string/myinfo_gift" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/list_style"
                    android:layout_marginVertical="3dp"
                    android:textSize="18dp"
                    android:paddingHorizontal="40dp"
                    android:paddingVertical="10dp"
                    android:text="@string/myinfo_exchange" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/list_style"
                    android:layout_marginVertical="3dp"
                    android:textSize="18dp"
                    android:paddingHorizontal="40dp"
                    android:paddingVertical="10dp"
                    android:text="@string/myinfo_service" />


                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/list_style"
                    android:layout_marginVertical="3dp"
                    android:textSize="18dp"
                    android:paddingHorizontal="40dp"
                    android:paddingVertical="10dp"
                    android:text="@string/myinfo_more" />
            </LinearLayout>
        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>